--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,16 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+ext{
+
+    // Core
+    support_library_version = '1.0.0'
+    constraint_version = '1.1.3'
+    app_compat_version = '1.1.0'
+    core_version='1.2.0'
+
+    // Dagger
+    dagger_version = '2.21'
+}
