--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     // Dependency injection
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+    // GSON Parser
+    implementation "com.google.code.gson:gson:$gson_version"
 }
