--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,10 @@ ext{
 
     // Parser
     gson_version = '2.8.5'
+
+    //Test
+    junit_version = '4.12'
+    mockito_version = '2.7.1'
+    core_testing_version = '1.1.0'
+    hamcrest_version = '2.1'
 }
