--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ ext{
     room_version = '2.2.3'
     debug_db_version = '1.0.6'
 
+    // Lifecycle
+    lifecycle_version = '2.0.0'
+
     //Test
     junit_version = '4.12'
     mockito_version = '2.7.1'
