--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ ext{
     // Lifecycle
     lifecycle_version = '2.0.0'
 
+    //Glide
+    glide_version = '4.7.1'
+
     //Test
     junit_version = '4.12'
     mockito_version = '2.7.1'
