--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     //glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
     //Tests
     testImplementation "junit:junit:$junit_version"
     testImplementation "org.mockito:mockito-core:$mockito_version"
